--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -15,6 +15,8 @@ brew "starship"
 brew "uv"
 # Shell extension to navigate your filesystem faster
 brew "zoxide"
+# rust language
+brew "rust"
 # Azure Functions Core Tools 4.0
 brew "azure/functions/azure-functions-core-tools@4"
 # Password manager that keeps all passwords secure behind one password
