fixes and mac spaces script

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -14,6 +14,7 @@ brew "zellij"
 brew "zoxide"
 brew "uv"
 brew "azure/functions/azure-functions-core-tools@4"
+brew "mas"
 cask "1password"
 cask "amethyst"
 cask "bruno"
@@ -26,3 +27,5 @@ cask "vanilla"
 cask "windows-app"
 cask "zed"
 cask "kindavim"
+cask "wooshy"
+cask "scrolla"
