--- a/zed/settings.json
+++ b/zed/settings.json
@@ -7,6 +7,9 @@
 // custom settings, run `zed: open default settings` from the
 // command palette (cmd-shift-p / ctrl-shift-p)
 {
+  "features": {
+    "edit_prediction_provider": "copilot"
+  },
   "auto_install_extensions": {
     "catppuccin-blur": true,
     "dockerfile": true,
@@ -22,8 +25,8 @@
   },
   "agent": {
     "default_model": {
-      "provider": "zed.dev",
-      "model": "claude-sonnet-4"
+      "provider": "copilot_chat",
+      "model": "gpt-5"
     }
   },
   "icon_theme": "Catppuccin Mocha",
