--- a/zed/settings.json
+++ b/zed/settings.json
@@ -24,6 +24,7 @@
     "catppuccin-icons": true
   },
   "agent": {
+    "default_profile": "ask",
     "default_model": {
       "provider": "copilot_chat",
       "model": "gpt-5"
