--- a/zed/settings.json
+++ b/zed/settings.json
@@ -44,5 +44,16 @@
       "border_size": 0.0,
       "inactive_opacity": 0.5
     }
+  },
+  "languages": {
+    "Python": {
+      "language_servers": [
+        // Disable basedpyright and enable Ty, and otherwise
+        // use the default configuration.
+        "pyright",
+        "!basedpyright",
+        "..."
+      ]
+    }
   }
 }
