--- a/zed/settings.json
+++ b/zed/settings.json
@@ -24,7 +24,8 @@
     "catppuccin-icons": true
   },
   "agent": {
-    "default_profile": "ask",
+    "always_allow_tool_actions": true,
+    "default_profile": "write",
     "default_model": {
       "provider": "copilot_chat",
       "model": "gpt-5"
