--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -1,4 +1,5 @@
 tap "azure/functions"
+tap "nikitabobko/tap"
 brew "azure-cli"
 brew "btop"
 brew "codex"
@@ -31,6 +32,7 @@ cask "kindavim"
 cask "wooshy"
 cask "scrolla"
 cask "keka"
+cask "aerospace"
 
 mas "Vimlike", id: 1584519802
 mas "Wipr", id: 1662217862
