--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -88,6 +88,8 @@ outer.right = 10
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#layout
 alt-slash = 'layout tiles horizontal vertical'
+alt-f = 'fullscreen'
+alt-y = ['focus left', 'join-with down', 'layout tiles vertical']
 # alt-comma = 'layout accordion horizontal vertical'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#focus
