arc added to brewfile

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -34,6 +34,7 @@ cask "scrolla"
 cask "keka"
 cask "aerospace"
 cask "font-meslo-lg-nerd-font"
+cask "arc"
 
 mas "Vimlike", id: 1584519802
 mas "Wipr", id: 1662217862
