feat: added window border

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -17,6 +17,9 @@ brew "azure/functions/azure-functions-core-tools@4"
 brew "mas"
 brew "nvim"
 brew "just"
+brew "borders"
+brew "lazygit"
+brew "leader-key"
 
 cask "1password"
 cask "amethyst"
