--- a/zed/settings.json
+++ b/zed/settings.json
@@ -24,6 +24,10 @@
     "catppuccin-icons": true
   },
   "agent": {
+    "default_model": {
+      "provider": "copilot_chat",
+      "model": "gpt-5"
+    },
     "always_allow_tool_actions": true,
     "default_profile": "write",
     "model_parameters": []
