--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -59,6 +59,7 @@ outer.left = 10
 outer.bottom = 10
 outer.right = 10
 outer.top = [
+  #TODO: fix this issue since main display both can be the build in and external
   { monitor.main = 10 },
   { monitor."LG UltraFine" = 44 }, # replace with your external's name
   10,                              # fallback if a display has no bar
