--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
 # Fish shell internal state
 fish/fish_variables
 
+# Fish plugins (fisher/nvm artifacts)
+fish/completions/
+fish/functions/
+fish/conf.d/nvm.fish
+fish/fish_plugins
+
 # macOS metadata
 .DS_Store
 
